# ripcord

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/ripcord-resume-codex/.claude-plugin/: plugin.json
plugins/ripcord-resume-codex/helpers/: ripcord_helper.py
plugins/ripcord-resume-codex/skills/resume-codex-session/: SKILL.md
skills/resume-claude-session/: SKILL.md
skills/resume-claude-session/runtime/: ripcord_helper.py
src/ripcord/: __init__.py  adapters.py  cli.py  homes.py  models.py  recovery.py  utils.py
tests/: test_recovery.py
